# air_bnb_backend

./: .gitignore  .vash_profile.swp  db.sqlite3  pyproject.toml  render.yaml
config/: settings.py
medias/: views.py
rooms/: admin.py  tests.py  views.py
tutorial-env/: pyvenv.cfg
users/: views.py
users/migrations/: 0001_initial.py
